--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,8 @@
 
         <Button android:text="onClick_circleSelector" android:onClick="onClick_circleSelector" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:padding="10dp"/>
 
+        <Button android:text="onClick_snackbar" android:onClick="onClick_snackbar" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:padding="10dp"/>
+
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
